[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "1.3" }
compiler = { path = "../compiler" }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-generate = "0.24.0"
serde_json = "1.0"
serde-reflection = "0.3.6"
wasm-bindgen = "0.2"

